# transaction-model

./: .dockerignore  .env.example  .gitignore  CONVENTIONS.md  How_To_Use.md  Makefile  README.md  RETRAIN.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements.txt
configs/: dataset.yaml  dataset_yl.yaml  tokenizer.yaml  training.yaml  training_yl.yaml  xgboost.yaml
configs/routec/: default.json  default_multinode.json
docker/: Dockerfile.base  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gpu.infer  Dockerfile.gpu.train  entrypoint.sh  healthcheck.py
examples/: README.md  generate_smoke_sample.py
examples/sample_data/: smoke.jsonl
scripts/: routec_ddp_multi_node.sh  routec_ddp_single_node.sh  run_pipeline.py  step_01_dataset_baseline.py  step_01b_load_ndjson.py  step_02_tokenize_corpus.py  step_02_tokenize_ndjson.py  step_03_train_model.py  step_04_extract_embeddings.py  step_05_fraud_detection.py  step_06_finetune_routec.py
tests/: test_ndjson_loader.py  test_routec_combined.py  test_routec_distributed.py  test_routec_losses.py  test_variant_dispatch.py  test_yl_pipeline.py
transaction_model/: __init__.py  _gpu_numpy.py  checkpoints.py  config.py  constants.py
transaction_model/corpus/: generate.py  generate_ndjson.py
transaction_model/data/: download.py  feature.py  loader.py  ndjson_loader.py  sampling.py  split.py
transaction_model/detection/: metrics.py  xgboost.py
transaction_model/finetune/: __init__.py  config.py  distributed.py  factory.py  trainer.py
transaction_model/finetune/data/: __init__.py  sft_dataset.py
transaction_model/finetune/losses/: __init__.py  impl.py
transaction_model/finetune/models/: __init__.py  classifier.py  combined.py  gpt2_seq_encoder.py  (+1 more)
transaction_model/inference/: decoder_inference.py  extract.py
transaction_model/tokenizer/: __init__.py  base.py  categorical_hash.py  financial_pipeline.py  fixed_vocab.py  mapping.py  numerical.py  pipeline.py  timedelta.py  yl_pipeline.py  yl_tokenizer.py
transaction_model/training/: clm_data.py  run_training.py  train.py
transaction_model/visualization/: data_viz.py  embedding_viz.py  results_viz.py  tokenizer_viz.py
