[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-model"
version = "1.0.0"
description = "Financial transaction foundation model for fraud detection"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.14",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "pandas>=2.1",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.18",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# GPU 加速三件套（RAPIDS）。这些 wheel 只发布在 NVIDIA 的 PyPI 索引上，
# 因此安装时必须带上 --extra-index-url：
#   pip install -e ".[gpu]" --extra-index-url https://pypi.nvidia.com
# 包名带 -cu12 后缀（不是裸 cudf/cuml/cupy）；RAPIDS 24.x 覆盖 Python 3.9–3.12。
gpu = [
    "cudf-cu12>=24.10",
    "cuml-cu12>=24.10",
    "cupy-cuda12x>=13.0",
]
nemo = [
    "nemo-automodel>=0.1",
    "liger-kernel",
    "torchdata>=0.7",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
include = ["transaction_model*"]

[tool.setuptools.package-data]
transaction_model = ["../configs/*.yaml"]
